api 일관성 수정. washer에서 body 대신 query를 받습니다. GET sagam/room/ 이 작동되도록 고쳤습니다.
